fix: img height stretch

--- a/siberian/app/sae/modules/Wordpress2/features/wordpress_v2/scss/wordpress2.scss
+++ b/siberian/app/sae/modules/Wordpress2/features/wordpress_v2/scss/wordpress2.scss
@@ -2,6 +2,7 @@
   .post-content {
     img {
       max-width: 100%;
+      height: auto;
     }
     p {
       margin-bottom: .75em;
